css/style.css
/* Reset all formatting */
* {
  margin: 0;
  padding: 0;
}

html, body {
  display: flex;
  flex-direction: column;
  height: 100%;
  background-color: #1a1a1a;
}

/* Sections */
#navbar {
  padding: 5px;
}

#canvas {
  flex: 1;
  justify-content: center;
  align-items: center;
  background-color: #2a2a2a;
}

#artboard {
  background-color: white;
}

#footer {
  padding: 5px;
}

/* Text Alignment */
.txtl {
  text-align: left;
}

.txtr {
  text-align: right;
}

.txtc {
  text-align: center;
}

/* Text Formatting */
p {
  color: white;
}

